--- a/plugin/module-gui/pom.xml
+++ b/plugin/module-gui/pom.xml
@@ -2,15 +2,15 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.intranda.goobi.plugins.step</groupId>
-	<artifactId>sample-gui</artifactId>
+	<artifactId>image_manipulation-gui</artifactId>
 	<version>1.0.0</version>
 	<properties>
-		<jar.name>plugin_intranda_step_sample-GUI</jar.name>
+		<jar.name>plugin_intranda_step_image_manipulation-GUI</jar.name>
 		<dest.folder>/opt/digiverso/goobi/plugins/GUI/</dest.folder>
 	</properties>
 	<parent>
 		<groupId>de.intranda.goobi.plugins.step</groupId>
-		<artifactId>sample</artifactId>
+		<artifactId>image_manipulation</artifactId>
 		<version>1.0.0</version>
 	</parent>
 	<build>
@@ -67,7 +67,7 @@
 		</plugins>
 	</build>
 	<scm>
-		<url>scm:git:ssh://git@gitea.intranda.com:goobi-workflow/goobi-plugin-step-sample.git</url>
-		<connection>scm:git:ssh://git@gitea.intranda.com:goobi-workflow/goobi-plugin-step-sample.git</connection>
+		<url>scm:git:ssh://git@gitea.intranda.com:goobi-workflow/goobi-plugin-step-image_manipulation.git</url>
+		<connection>scm:git:ssh://git@gitea.intranda.com:goobi-workflow/goobi-plugin-step-image_manipulation.git</connection>
 	</scm>
 </project>
