--- a/module-base/pom.xml
+++ b/module-base/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>io.goobi.workflow.plugin</groupId>
     <artifactId>plugin-step-image-manipulation</artifactId>
-    <version>25.04</version>
+    <version>25.05-SNAPSHOT</version>
   </parent>
   <artifactId>plugin-step-image-manipulation-base</artifactId>
   <packaging>jar</packaging>
